tests/trybuild/entities/component_order.stderr
error[E0308]: mismatched types
 --> tests/trybuild/entities/component_order.rs:8:39
  |
8 |     let entities = entities!((A, B), (B, A));
  |                                       ^ expected `A`, found `B`

error[E0308]: mismatched types
 --> tests/trybuild/entities/component_order.rs:8:42
  |
8 |     let entities = entities!((A, B), (B, A));
  |                                          ^ expected `B`, found `A`
